--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         html,body,iframe{
             height: 100%;
             width: 100%;
+            padding:0px;
+            margin:0px;
         }
     </style>
 </head>
