--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://124.70.193.2:8088/" frameborder="0"></iframe>
+    <iframe src="http://124.70.193.2:8088/" frameborder="0"></iframe>
 </body>
 </html>
